--- a/Our Local Media/Base.lproj/Main.storyboard
+++ b/Our Local Media/Base.lproj/Main.storyboard
@@ -305,99 +305,15 @@
             <point key="canvasLocation" x="5140" y="-392.65367316341832"/>
         </scene>
         <!--Directory View Controller-->
-        <scene sceneID="zPH-3f-Exh">
-            <objects>
-                <viewController storyboardIdentifier="directoryViewController" automaticallyAdjustsScrollViewInsets="NO" id="7Oc-sP-PjK" customClass="DirectoryViewController" customModule="Our_Local_Media" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="1GB-w2-tc1">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8tM-jA-alK">
-                                <rect key="frame" x="9" y="82" width="398" height="634"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nDk-4k-otZ">
-                                    <size key="itemSize" width="343" height="53"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="directoryCell" id="2cz-E5-z2O" customClass="DirectoryCollectionViewCell" customModule="Our_Local_Media" customModuleProvider="target">
-                                        <rect key="frame" x="27.666666666666668" y="10" width="343" height="53"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="53"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pi-tH-hnP">
-                                                    <rect key="frame" x="265" y="7" width="58" height="39"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="58" id="lIC-Oy-KTZ"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                    <color key="textColor" red="0.58823529409999997" green="0.019607843140000001" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="99v-0s-A2r">
-                                                    <rect key="frame" x="20" y="15" width="175" height="20"/>
-                                                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
-                                                    <color key="textColor" red="0.58823529409999997" green="0.019607843140000001" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </view>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstItem="6pi-tH-hnP" firstAttribute="leading" secondItem="99v-0s-A2r" secondAttribute="trailing" constant="70" id="5Jd-Ue-y4W"/>
-                                            <constraint firstItem="99v-0s-A2r" firstAttribute="top" secondItem="2cz-E5-z2O" secondAttribute="top" constant="15" id="7RJ-4b-YUo"/>
-                                            <constraint firstAttribute="trailing" secondItem="6pi-tH-hnP" secondAttribute="trailing" constant="20" id="HWO-2D-mFl"/>
-                                            <constraint firstAttribute="bottom" secondItem="99v-0s-A2r" secondAttribute="bottom" constant="18" id="Pwu-la-wvA"/>
-                                            <constraint firstItem="99v-0s-A2r" firstAttribute="leading" secondItem="2cz-E5-z2O" secondAttribute="leading" constant="20" id="RbQ-2u-Zbf"/>
-                                            <constraint firstAttribute="bottom" secondItem="6pi-tH-hnP" secondAttribute="bottom" constant="7" id="bCI-Bk-9GR"/>
-                                            <constraint firstItem="6pi-tH-hnP" firstAttribute="top" secondItem="2cz-E5-z2O" secondAttribute="top" constant="7" id="lAf-fA-L4g"/>
-                                        </constraints>
-                                        <size key="customSize" width="343" height="53"/>
-                                        <connections>
-                                            <outlet property="directoryIcon" destination="6pi-tH-hnP" id="wNt-le-BbX"/>
-                                            <outlet property="directorySubTopicLabel" destination="99v-0s-A2r" id="MPh-Ha-pr3"/>
-                                            <segue destination="KGT-dc-b0w" kind="show" identifier="directoryWebViewSegue" id="pwp-EY-dDp"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="7Oc-sP-PjK" id="W9v-84-1n7"/>
-                                    <outlet property="delegate" destination="7Oc-sP-PjK" id="Fx8-pk-dt9"/>
-                                </connections>
-                            </collectionView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="wpT-EF-z3c" firstAttribute="trailing" secondItem="8tM-jA-alK" secondAttribute="trailing" constant="7" id="J9X-Aw-BLm"/>
-                            <constraint firstItem="8tM-jA-alK" firstAttribute="top" secondItem="wpT-EF-z3c" secondAttribute="top" constant="18" id="QvK-pD-mLa"/>
-                            <constraint firstItem="8tM-jA-alK" firstAttribute="leading" secondItem="wpT-EF-z3c" secondAttribute="leading" constant="9" id="cTZ-8Z-IJq"/>
-                            <constraint firstItem="wpT-EF-z3c" firstAttribute="bottom" secondItem="8tM-jA-alK" secondAttribute="bottom" constant="20" id="hgC-Ka-KVB"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="wpT-EF-z3c"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="WjU-PW-3Cc"/>
-                    <connections>
-                        <outlet property="directoryCollectionView" destination="8tM-jA-alK" id="vbO-za-EBu"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OSN-OQ-hkX" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="6630" y="473.23943661971833"/>
-        </scene>
-        <!--Directory Web Page View Controller-->
         <scene sceneID="OiI-CK-oJe">
             <objects>
-                <viewController storyboardIdentifier="directoryWebViewController" id="KGT-dc-b0w" customClass="DirectoryWebPageViewController" customModule="Our_Local_Media" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="directoryViewController" id="KGT-dc-b0w" customClass="DirectoryViewController" customModule="Our_Local_Media" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AGN-0h-4Fb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GXo-Nu-ERg">
-                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                         </subviews>
@@ -417,7 +333,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OTA-sq-emK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8458.3999999999996" y="691.304347826087"/>
+            <point key="canvasLocation" x="6372" y="500"/>
         </scene>
         <!--SportsViewController-->
         <scene sceneID="wHC-ex-Iiq">
@@ -638,7 +554,6 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="7Oc-sP-PjK" kind="relationship" relationship="rootViewController" id="9ws-eW-ySv"/>
                         <segue destination="6LE-Wq-0us" kind="show" id="3j9-sb-ZCu"/>
                     </connections>
                 </navigationController>
@@ -665,6 +580,38 @@
             </objects>
             <point key="canvasLocation" x="6054" y="1424"/>
         </scene>
+        <!--About View Controller-->
+        <scene sceneID="wLs-RG-Twi">
+            <objects>
+                <viewController storyboardIdentifier="AboutViewController" id="1cS-FS-BhM" customClass="AboutViewController" customModule="Our_Local_Media" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ewH-Fk-KJ7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3Qe-Ey-bDa">
+                                <rect key="frame" x="20" y="39" width="374" height="659"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3Qe-Ey-bDa" firstAttribute="leading" secondItem="qUv-lz-9Mh" secondAttribute="leading" constant="20" id="8XU-0Q-6XQ"/>
+                            <constraint firstItem="qUv-lz-9Mh" firstAttribute="bottom" secondItem="3Qe-Ey-bDa" secondAttribute="bottom" constant="38" id="DfH-8Z-fRv"/>
+                            <constraint firstItem="3Qe-Ey-bDa" firstAttribute="top" secondItem="qUv-lz-9Mh" secondAttribute="top" constant="19" id="kW2-2L-K8t"/>
+                            <constraint firstItem="qUv-lz-9Mh" firstAttribute="trailing" secondItem="3Qe-Ey-bDa" secondAttribute="trailing" constant="20" id="vUl-NJ-zoi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qUv-lz-9Mh"/>
+                    </view>
+                    <connections>
+                        <outlet property="aboutUs" destination="3Qe-Ey-bDa" id="D1p-Cn-18D"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ILW-pv-EWn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1408.6956521739132" y="3010.597826086957"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="DOG-aI-5de">
             <objects>
@@ -687,6 +634,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="mWz-l7-Nkb"/>
+        <segue reference="hr2-Tg-IgX"/>
     </inferredMetricsTieBreakers>
 </document>
